=======
CHANGES
=======

3.6.1 (unreleased)
------------------


3.6.0 (2009-12-29)
------------------

- Refactor tests to loose zope.annotation and zope.dublincore as dependencies.

3.5.2 (2009-05-17)
------------------

- ``IObjectMovedEvent``, ``IObjectAddedEvent``,
  ``IObjectRemovedEvent`` interfaces and ``ObjectMovedEvent``,
  ``ObjectAddedEvent`` and ``ObjectRemovedEvent`` classes copied here
  from zope.container (plus tests).  The intent is to allow packages
  that rely on these interfaces or the event classes to rely on
  zope.lifecycleevent (which has few dependencies) instead of
  zope.container (which has many).

3.5.1 (2009-03-09)
------------------

- Remove deprecated code and thus remove dependency on zope.deferredimport.

- Change package's mailing list address to zope-dev at zope.org, as
  zope3-dev at zope.org is now retired. 

- Update package's description and documentation.

3.5.0 (2009-01-31)
------------------

- Remove old module declarations from classes.

- Use zope.container instead of zope.app.container.

3.4.0 (2007-09-01)
------------------

Initial release as an independent package