@@ -5,6 +5,7 @@ CHANGES
 3.6.1 (unreleased)
 ------------------
 
+- Removed dependency on undeclared zope.testing.doctest.
 
 3.6.0 (2009-12-29)
 ------------------
